data/derived/fa15/progs/unify/prog3105.ml.out
Characters 61-69:
  | hd::tl -> (hd * i) @ [mulByDigit i tl];;
              ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
